fix text align issue on v2

--- a/css/dodge2.css
+++ b/css/dodge2.css
@@ -116,7 +116,7 @@ body button {
   left: 50%;
   width: fit-content;
 
-  transform: translate(-50px);
+  transform: translate(-25px);
 }
 
 #playAgain {
